<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Import"
    android:background="@color/bgColor">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/bibo_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTopOfLogo"
        />
    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chalkduster"
        android:text="@string/qoute"
        android:layout_below="@+id/logo"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="450dp"
        android:background="@color/frameColor"
        android:layout_below="@+id/quote"
        android:layout_marginTop="@dimen/marginTopOfLogo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/importing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importing"
            android:textColor="@color/titleColor"
            android:textStyle="bold"
            android:textSize="@dimen/titleSize"
            android:layout_marginTop="@dimen/marginTopOfTitle"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/jenniferfont"/>

        <EditText
            android:id="@+id/publisherName"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfTitle"
            android:layout_below="@+id/importing"
            android:layout_centerHorizontal="true"
            android:hint="@string/publisherName"
            android:gravity="center"
            android:textAlignment="textStart"
            android:inputType="text"
            android:paddingLeft="@dimen/paddingForAllBox"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/title"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfBox"
            android:layout_below="@+id/publisherName"
            android:layout_centerHorizontal="true"
            android:hint="@string/title"
            android:gravity="center"
            android:textAlignment="textStart"
            android:inputType="text"
            android:paddingLeft="@dimen/paddingForAllBox"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/genre"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfBox"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:hint="@string/genre"
            android:gravity="center"
            android:textAlignment="textStart"
            android:inputType="text"
            android:paddingLeft="@dimen/paddingForAllBox"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/pYear"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfBox"
            android:layout_below="@+id/genre"
            android:layout_centerHorizontal="true"
            android:hint="@string/pYear"
            android:gravity="center"
            android:textAlignment="textStart"
            android:inputType="text"
            android:paddingLeft="@dimen/paddingForAllBox"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/qtyImport"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfBox"
            android:layout_below="@+id/pYear"
            android:layout_centerHorizontal="true"
            android:hint="@string/qty"
            android:gravity="center"
            android:textAlignment="textStart"
            android:inputType="text"
            android:paddingLeft="@dimen/paddingForAllBox"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/price"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfBox"
            android:layout_below="@+id/qtyImport"
            android:layout_centerHorizontal="true"
            android:hint="@string/price"
            android:gravity="center"
            android:textAlignment="textStart"
            android:inputType="text"
            android:paddingLeft="@dimen/paddingForAllBox"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/importBtn"
            android:background="@drawable/round_login"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importing"
            android:textSize="@dimen/textSizeBtn"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTopOfBtn"
            android:layout_below="@id/price"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>