<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        tools:context=".Login"
        android:background="@color/bgColor">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/bibo_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTopOfLogo"
            />
        <TextView
            android:id="@+id/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chalkduster"
            android:text="@string/qoute"
            android:layout_below="@+id/logo"
            android:textAlignment="center"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="343dp"
            android:layout_height="440dp"
            android:layout_below="@+id/quote"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_frame">

            <TextView
                android:id="@+id/LogInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/LoginText"
                android:textColor="@color/LogInTextColor"
                android:textSize="@dimen/LogInTextSize"
                android:fontFamily="@font/jenniferfont"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/Username"
                android:layout_width="@dimen/UsernameAndPasswordWidth"
                android:layout_height="@dimen/UsernameAndPasswordHeight"
                android:layout_below="@id/LogInText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_box"
                android:inputType="text"
                android:hint="@string/UsernameHint"
                android:paddingLeft="@dimen/PaddingLeftOfUsername" />


            <EditText
                android:id="@+id/Password"
                android:layout_width="@dimen/UsernameAndPasswordWidth"
                android:layout_height="@dimen/UsernameAndPasswordHeight"
                android:layout_below="@id/Username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/MarginTopOfPassword"
                android:background="@drawable/round_box"
                android:inputType="textPassword"
                android:hint="@string/PasswordHint"
                android:paddingLeft="@dimen/PaddingLeftOfPassword" />


            <TextView
                android:id="@+id/SignUp_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Password"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/MarginRightOfSignUpButton"
                android:text="@string/TextSignUpButton"
                android:textSize="17sp"/>

            <Button
                android:id="@+id/LogInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/SignUp_txt"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_login"
                android:paddingLeft="@dimen/PaddingLeftAndRightOfLogInButton"
                android:paddingRight="@dimen/PaddingLeftAndRightOfLogInButton"
                android:text="@string/LogInButtonText"
                android:textColor="@color/TextLoginButtonColor"
                android:textSize="@dimen/LogInButtonSize" />

            <TextView
                android:id="@+id/ForgotYourPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/LogInButton"
                android:layout_centerHorizontal="true"
                android:text="@string/ForgotYourpasswordText"
                android:textSize="@dimen/ForgotYourPasswordTextSize"
                 android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/OrLoginWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ForgotYourPassword"
                android:layout_centerHorizontal="true"
                android:text="@string/OrLoginWith" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/OrLoginWithText"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/fbBtn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/fb_logo" />

                <ImageButton
                    android:id="@+id/googleBtn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/google_logo" />

            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</ScrollView>