<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adding"
    android:background="@color/bgColor">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/bibo_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTopOfLogo"
        />
    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chalkduster"
        android:text="@string/qoute"
        android:layout_below="@+id/logo"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="250dp"
        android:background="@color/frameColor"
        android:layout_below="@+id/quote"
        android:layout_marginTop="@dimen/marginTopOfLogo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/adding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adding"
            android:textColor="@color/titleColor"
            android:textStyle="bold"
            android:textSize="@dimen/titleSize"
            android:layout_marginTop="@dimen/marginTopOfTitle"
            android:fontFamily="@font/jenniferfont"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/bookIdAndName"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfBox"
            android:layout_below="@+id/adding"
            android:layout_centerHorizontal="true"
            android:hint="@string/bIdAndName"
            android:gravity="center"
            android:textAlignment="textStart"
            android:paddingLeft="@dimen/paddingForAllBox"
            android:inputType="text"
            tools:ignore="RtlCompat"
            />

        <EditText
            android:id="@+id/qtyExport"
            android:layout_width="@dimen/widthBox"
            android:layout_height="@dimen/heigthBox"
            android:background="@drawable/round_box"
            android:layout_marginTop="@dimen/marginTopOfBox"
            android:layout_below="@+id/bookIdAndName"
            android:layout_centerHorizontal="true"
            android:hint="@string/qty"
            android:gravity="center"
            android:textAlignment="textStart"
            android:paddingLeft="@dimen/paddingForAllBox"
            android:inputType="text"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/exportAddBtn"
            android:background="@drawable/round_login"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exportBtn"
            android:textSize="@dimen/textSizeBtn"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTopOfBtn"
            android:layout_below="@id/qtyExport"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>