<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMore"
    android:background="@color/bgColor">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/bibo_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTopOfLogo"
        />
    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chalkduster"
        android:text="@string/qoute"
        android:layout_below="@+id/logo"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="270dp"
        android:background="@color/frameColor"
        android:layout_below="@+id/quote"
        android:layout_marginTop="@dimen/marginTopOfLogo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        >

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopOfTitle"
            android:text="@string/addMore"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/titleSize"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/jenniferfont"/>

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add"
            android:layout_marginTop="@dimen/marginTopOfBtn"
            android:background="@drawable/round_login"
            android:text="@string/yesBtn"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeBtn"
            android:textStyle="bold"
            android:layout_marginLeft="55dp"/>

        <Button
            android:id="@+id/noBtn"
            android:background="@drawable/round_box_no"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noBtn"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:textSize="@dimen/textSizeBtn"
            android:layout_marginTop="@dimen/marginTopOfBtn"
            android:layout_below="@id/add"
            android:layout_toEndOf="@+id/yesBtn"
            />

    </RelativeLayout>

</RelativeLayout>